<resources>
    <string name="todo">TODO</string>
    <string name="frenzimned_therapy1">FRENZIMED Therapy</string>
    <string name="frenzimed_therapy">The Future Without </string>
    <string name="get_started">Get Started</string>
    <string name="todo2">TODO</string>
    <string name="frenzimed_therapyb">MEDICINES</string>
    <string name="todo1">TODO</string>
    <string name="signup">Signup</string>
    <string name="register">Register</string>
    <string name="sign_in1">Sign in</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="log_in">Log in</string>
    <string name="new_customer">Do not have Account?</string>
    <string name="register_yourself">Register yourself.</string>
    <string name="sign_in">Sign in</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Password</string>
    <string name="already_register_login_here">Already register? Login Here.</string>
    <string name="phone">phone</string>
    <string name="paired_devices">Paired Device</string>
    <string name="action_settings">Settings</string>
    <string name="fernzimed_ir_pain_reliever">FRENZIMED Therapy</string>
    <string name="Disconnect">Disconnect</string>
    <string name="Exit">Exit</string>
    <string name="user_s_response">User\'s Response</string>
    <string name="is_still_there_is_any_pain_after_the_therapy_rate_below">Is still there is any pain after the therapy.</string>
    <string name="no_pain">No Pain</string>
    <string name="mild_pain">Mild Pain</string>
    <string name="moderate">Moderate</string>
    <string name="worst">Worst</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="start">start</string>
    <string name="set">Set</string>
    <string name="reset">reset</string>
    <string name="minutes">Minutes</string>
    <string name="_00_00">00:00</string>
    <string name="information">INFORMATION</string>
    <string name="enter_name">Enter Name</string>
    <string name="entername">Enter Name</string>
    <string name="userInformation">User Information</string>
    <string name="enterage">Enter Age</string>
    <string name="IRLightDuration">Infra-Red Therapy Duration </string>
    <string name="IRLightStrength">Infra-Red Light Strength </string>
    <string name="bluetooth_on">Bluetooth ON</string>
    <string name="start_time_h_m">Motor Start Time (H:M):</string>
    <string name="app_name">Irrigation Scheduler</string>
    <string name="time_picker_example">FrenziTech Motor Controller</string>
    <string name="instruction_0_txt">Start time Hours : Minutes</string>
    <string name="instruction_1_txt">Duration (run time) Hours : Minutes</string>
    <string name="duration_hr_txt">Hours</string>
    <string name="duration_min_txt">Min.</string>

    <string name="instruction_2_txt">Frequency (interval days) 1, 2, ... 8, 10</string>
    <string name="option_0_txt">Motor voltage (Volts) 110, 220, 440</string>
    <string name="option_1_txt">Motor current (Amps) 1, 2, 3, ... 100</string>
    <string name="option_2_txt">Soil moisture (%) 0-99</string>
    <string name="option_3_txt">Soil temperature (F) 0-99</string>
    <string name="option_4_txt">Air temperature (F) 0-99</string>

    <string name="time_save">Save</string>
    <string name="time_selected"></string>
    <string name="time_motor_on">Motor ON at:</string>
</resources>